--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.18",
     "@remix-run/node": "^2.9.1",
     "@remix-run/react": "^2.9.1",
     "@remix-run/serve": "^2.9.1",
+    "@sanity/client": "^6.18.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/overlays": "^2.3.44",
+    "@sanity/react-loader": "^1.9.17",
+    "@supabase/supabase-js": "^2.43.1",
+    "groq": "^3.41.1",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
